@@ -62,7 +62,7 @@
 <body>
     <center>HTTP Code 400 - The server cannot or will not process the request due to something that is perceived to be a client error. Examples include malformed request syntax, invalid request message framing, or deceptive request routing.
 <br>
-<p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a></p>
+<p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a></p>
 </center>
 </body>
 </html>
