@@ -60,7 +60,7 @@
 <body>
     <center>HTTP Code 404 - You are probably lost... This is not a server-side error.
 <br>
-<p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a></p>
+<p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a></p>
 </center>
 </body>
 </html>
