@@ -61,7 +61,7 @@
 <body>
     <center>HTTP Code 500 - Internal Server-side error. Not the reverse proxy either...
 <br>
-<p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a></p>
+<p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a></p>
 </center>
 </body>
 </html>
