@@ -170,7 +170,7 @@
         <!-- Technician logout button -->
         <a href="{{ url_for('logout') }}" class="logout-btn">Logout</a>
         <!-- Footer Text -->
-        <p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a> | Logged In as: {{ loggedInTech }}</p>
+        <p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a> | Logged In as: {{ loggedInTech }}</p>
     </div>
 </body>
 </html>
