@@ -168,10 +168,11 @@
                 <option value="Change">Change</option>
                 <option value="Access">Access</option>
             </select>
+            <br>
             <div class="cf-turnstile" data-sitekey="{{ sitekey }}" data-theme="light"></div>
             <button type="submit" class="submit-btn">Submit Ticket</button>
         </form>
-        <p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a> | <a href="{{ url_for('login') }}">Tech Login</a></p>
+        <p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a> | <a href="{{ url_for('login') }}">Tech Login</a></p>
     </div>
 </body>
 </html>
