@@ -102,7 +102,7 @@
 
             <button type="submit" class="submit-btn">Login</button>
         </form>
-        <p class="footer-text">©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a></p>
+        <p class="footer-text">©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a></p>
     </div>
 </body>
 </html>
