@@ -94,18 +94,17 @@
         Ticket Created: {{ticket.ticket_number}}
       </h1>
         <p>Howdy Customer! <br>Your Service Desk Ticket {{ticket.ticket_number}} has been created. It has a status of {{ticket.ticket_status}}. You provided the following details... {{ticket.ticket_message}}.<br>A Technician will contact you shortly.</p>
-        <p class="small-text">Respectfully,<br>BlueBotPC Service Desk</p>
+        <p class="small-text">Respectfully,<br>Service Desk</p>
         <table role="presentation" border="0" cellspacing="0" cellpadding="0">
           <tr>
             <td>
-              <a target="_blank" href="https://www.bluebotpc.com" rel="noopener noreferrer">Website</a> | 
+              <a target="_blank" href="https://github.com/bluebotpc" rel="noopener noreferrer">github</a> |
               <a target="_blank" href="https://discord.gg/jFr5JnTUZd" rel="noopener noreferrer">Discord</a> |
-              <a target="_blank" href="https://forms.gle/uiEjs79uYD2KcfxT9" rel="noopener noreferrer">Submit Feedback</a>
               <p class="footer-text">
                 This was an automated message sent by the GoobyDesk Service Desk. If you are not the intended recipient, please let us know and we will ensure you are not contacted by our system again. 
               </p>
               <p class="footer-text" style="margin-bottom: 50px;">
-              ©2025 GoobyDesk, FOSS by <a href="https://www.bluebotpc.com/">BlueBotPC</a>
+              ©2025 GoobyDesk, FOSS created by <a href="https://github.com/bluebotpc">Gooby</a>
             </p>
             </td>
           </tr>
